--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
   - oraclejdk17
 
-#script:
-#  - "mvn clean jacoco:prepare-agent install jacoco:report"
+script:
+  - "mvn clean jacoco:prepare-agent install jacoco:report"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash -t $CODECOV_TOKEN)
