Alteração de arquivo .travis.yml para CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
-#jdk:
-#  - oraclejdk17
+jdk:
+  - oraclejdk17
 #
 #script:
 #  - "mvn clean jacoco:prepare-agent install jacoco:report"
